sheep-dog-aws/kubernetes/base/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sheep-dog-aws-db
  labels:
    app: sheep-dog-aws-db
spec:
  selector:
    matchLabels:
      app: sheep-dog-aws-db
  template:
    metadata:
      labels:
        app: sheep-dog-aws-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "384Mi"
              cpu: "500m"
            requests:
              memory: "192Mi"
              cpu: "250m"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}
