sheep-dog-aws/kubernetes/base/artemis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-aws-artemis
  labels:
    app: sheep-dog-aws-artemis
spec:
  selector:
    app: sheep-dog-aws-artemis
  ports:
    - port: 61616
      targetPort: 61616
      name: jms
    - port: 8161
      targetPort: 8161
      name: console
  type: ClusterIP
