sheep-dog-aws/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-aws-service
  labels:
    app: sheep-dog-aws
spec:
  selector:
    app: sheep-dog-aws
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
