sheep-dog-aws/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sheep-dog-aws-ingress
  labels:
    app: sheep-dog-aws
spec:
  rules:
    - host: aws.sheepdogdev.io
      http:
        paths:
          - path: "/greeting"
            pathType: Prefix
            backend:
              service:
                name: sheep-dog-aws-service
                port:
                  number: 80
